src/global/global.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

:root {
  --background: #eeffff;
  --foreground: #171717;
  --title: rgb(136, 136, 255);
  --sub-title: rgb(68, 68, 255);
  --table-border: 1px solid rgba(0, 0, 0, 0.12);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #002d3f;
    --foreground: #ededed;
    --title: rgb(199, 255, 255);
    --sub-title: rgb(255, 255, 255);
    --border: 1px solid rgba(255, 255, 255, 0.88);
  }
}

body {
  min-width: 100svw;
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

header {
  position: sticky;
  top: 0;
  z-index: 100;
  margin-bottom: 4px;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

.title {
  color: var(--title);
}

.sub-title {
  color: var(--sub-title);
}

.card-border {
  border-radius: 0.5rem; /* rounded-lg */
  border: 1px solid #e5e7eb; /* border & border-gray-200 */
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); /* shadow-sm */
}

.map-overlay {
  position: absolute;
  top: 50%;
  -ms-transform: translate(-50%, -45%);
  -webkit-transform: translate(-50%, -45%);
  transform: translate(-50%, -45%);
  color: #ffd676;
  font-weight: 600;
  text-shadow: 2px 1px 1px #653c00;
  margin: 0 !important;
  padding: 0 !important;
  pointer-events: none;
}

.range-slider {
  -webkit-appearance: none;
  transition: all 200ms ease;
  appearance: none;
  cursor: pointer;
  background-color: #8dffce;
  height: 12px;
  width: 100%;
  border-radius: 10px;
  border: solid 2px #0fe645;
  outline: 0;
  &:focus {
    box-shadow: 0 0 3px rgb(0, 255, 8);
  }
  &:hover {
    &::-webkit-slider-thumb {
      background-color: #0fe645;
    }
    &::-moz-range-thumb {
      background-color: #0fe645;
    }
  }
  &::-webkit-slider-thumb {
    outline: solid 2px #009238;
    -webkit-appearance: none;
    background-color: #13c941;
    width: 26px;
    height: 26px;
    border-radius: 50%;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
  }
  &::-moz-range-thumb {
    outline: solid 2px #009238;
    background-color: #13c941;
    width: 26px;
    height: 26px;
    border-radius: 50%;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
    border: none;
  }
  &::-moz-focus-outer {
    border: 0;
  }
  &:active::-webkit-slider-thumb {
    box-shadow: 0px 5px 10px -2px rgba(0, 0, 0, 0.3);
  }
}

.range-slider-error {
  -webkit-appearance: none;
  transition: all 200ms ease;
  appearance: none;
  cursor: pointer;
  background-color: #ffafaf;
  height: 12px;
  width: 100%;
  border-radius: 10px;
  border: solid 2px #ff2a2a;
  outline: 0;
  &:disabled {
    background-color: #cacaca;
    cursor: not-allowed;
    &:hover {
      &::-webkit-slider-thumb {
        outline-color: #9e9e9e;
        background-color: #cacaca;
      }
      &::-moz-range-thumb {
        outline-color: #9e9e9e;
        background-color: #cacaca;
      }
    }
    &::-webkit-slider-thumb {
      outline-color: #9e9e9e;
      background-color: #cacaca;
    }
    &::-moz-range-thumb {
      outline-color: #9e9e9e;
      background-color: #cacaca;
    }
  }
  &:focus {
    box-shadow: 0 0 3px rgb(255, 8, 8);
  }
  &:hover {
    &::-webkit-slider-thumb {
      background-color: #ff2a2a;
    }
    &::-moz-range-thumb {
      background-color: #ff2a2a;
    }
  }
  &::-webkit-slider-thumb {
    outline: solid 2px #aa0606;
    -webkit-appearance: none;
    background-color: #d31818;
    width: 26px;
    height: 26px;
    border-radius: 50%;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
  }
  &::-moz-range-thumb {
    outline: solid 2px #d31818;
    background-color: #d31818;
    width: 26px;
    height: 26px;
    border-radius: 50%;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.35);
    border: none;
  }
  &::-moz-focus-outer {
    border: 0;
  }
  &:active::-webkit-slider-thumb {
    box-shadow: 0px 5px 10px -2px rgba(0, 0, 0, 0.3);
  }
}

.mermaid {
  @apply overflow-x-auto text-sm leading-snug;
}

